--- a/application/views/Pages/cart.html
+++ b/application/views/Pages/cart.html
@@ -9,9 +9,9 @@
 		<!-- Always force latest IE rendering engine or request Chrome Frame -->
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<!-- Page Title -->
-        <title>project</title>		
+        <title>Shopping Cart</title>		
 		<!-- Meta Description -->
-        <meta name="description" content="project page">
+        <meta name="description" content="profile page">
         <meta name="keywords" content="one page, single page, onepage, responsive, parallax, creative, business, html5, css3, css3 animation">
         <meta name="author" content="------------**jackie chen**------------">
 		<!-- Mobile Specific Meta -->
@@ -27,10 +27,6 @@
         <link rel="stylesheet" href="css/font-awesome.min.css">
 		<!-- Twitter Bootstrap css -->
         <link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>		
 		<!-- jquery.fancybox  -->
         <link rel="stylesheet" href="css/jquery.fancybox.css">
 		<!-- animate -->
@@ -39,31 +35,14 @@
         <link rel="stylesheet" href="css/main.css">
 		<!-- media-queries -->
         <link rel="stylesheet" href="css/media-queries.css">
-		<!-- project pic css -->
-        <link rel="stylesheet" href="css/project.css">
 
 		<!-- Modernizer Script for old Browsers -->
         <script src="js/modernizr-2.6.2.min.js"></script>
-        <script src="js/project.js"></script>
-		<!-- Image Zoom -->
-		
-		<script src='js/jquery-2.1.0.min.js'></script>
-		<script src='js/jquery.elevatezoom.js'></script>
-		
-		<!-- Modernizr js -->
-		<script type="text/javascript" src="js/modernizr-2.8.0.min.js"></script>
-		<!-- Plugins -->
-		<script type="text/javascript" src="js/plugins.js"></script>
-		<!-- Custom JavaScript Functions -->
-		<script type="text/javascript" src="js/time_functions.js"></script>
-		
+
     </head>
 	
     <body id="body">
-		
-		
-		
-		
+	
 		<!-- preloader -->
 		<div id="preloader">
 			<img src="img/preloader.gif" alt="Preloader">
@@ -96,11 +75,10 @@
 				<!-- main nav -->
                 <nav class="collapse navbar-collapse navbar-right" role="navigation">
                     <ul id="nav" class="nav navbar-nav">
-                        <li ><a href="#facts">Home</a></li>
-                        <li class="current"><a href="#works">Project</a></li>
-                        <li><a href="#features">Detailed</a></li>
-                        <li><a href="#team">Team</a></li>
-                        <li><a href="#comment">Comment</a></li>
+                        <li class="current"><a href="#body">Cart</a></li>
+                        <li><a href="#contact">123</a></li>
+                        <li><a href="#background">456</a></li>
+                        <li><a href="#purchased">789</a></li>
                     </ul>
                     
                     <ul id="nav1" class="nav navbar-nav">
@@ -116,297 +94,116 @@
         End Fixed Navigation
         ==================================== -->
 		
-		
-		
-		<!--
-        Some fun facts
-        ==================================== -->		
-		
-		<section id="facts" class="facts">
-			<div class="parallax-overlay">
-				<div class="container">
-					
-				</div>
-			</div>
-		</section>
-		
-        <!--
-        End Some fun facts
-        ==================================== -->
-	      
-		
-        <!--
-        Our Works
-        ==================================== -->
-		
-		<section id="works" class="works">	
-			<div class="container">
-				<div class="row">
-				
-					<div class="sec-title text-center">
-						<h2>@title</h2>
-						<div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
-					</div>
-					
-					<!-- start of row -->
-					<div class="row">
-					
-						<div class="project-wrapper col-md-5">
-							<figure class="mix work-item-project">
-							<img id="zoom_01" src='img/zoom_images/small/image1.png' data-zoom-image="img/zoom_images/large/image1.jpg"/>
-							</figure>
+
 			
-							<script>
-								$('#zoom_01').elevateZoom({
-							    zoomType: "inner",
-							cursor: "crosshair",
-							scrollZoom: true,
-							zoomWindowFadeIn: 500,
-							zoomWindowFadeOut: 750
-							   }); 
-								</script>	
-							 
-							
-						</div>
-					
-						<div class="text-center col-md-7">
-							<br/>
-							<p>@desciption</p>
-							<p>@round</p>
-							<p>@price</p>
-							<div class="btn-group">
-							<div class="btn-group">
-						            <button type="button" data-toggle="dropdown" class="btn btn-info dropdown-toggle">size<span class="caret"></span></button>
-						            <ul class="dropdown-menu">
-						                <li><a href="#">xs</a></li>
-						                <li><a href="#">s</a></li>
-						                <li><a href="#">m</a></li>
-						                <li><a href="#">l</a></li>
-						                <li><a href="#">xl</a></li>
-						                <li><a href="#">xxl</a></li>
-						                <li><a href="#">xxxl</a></li>
-						                <li class="divider"></li>
-						                <li><a href="#">xxxxl</a></li>
-						            </ul> 
-						        </div>
-						    </div><br/><br/><br/>
-						        <button type="button" class="btn btn-success">Buy</button>
-						        <button type="button" class="btn btn-warning">Add to Cart</button>
-						     
-						    <div class="row number-counters">
-							<!-- split -->	
-							<div id="time_countdown" class="time-count-container">
-			
-								<div class="col-sm-3">
-									<div class="time-box">
-										<div class="time-box-inner dash days_dash animated" data-animation="rollIn" data-animation-delay="300">
-											<span class="time-number">
-												<span class="digit">0</span>
-												<span class="digit">0</span>
-												<span class="digit">0</span>
-											</span>
-											<span class="time-name">Days</span>
-										</div>
-									</div>
-								</div>
-			
-								<div class="col-sm-3">
-									<div class="time-box">
-										<div class="time-box-inner dash hours_dash animated" data-animation="rollIn" data-animation-delay="600">
-											<span class="time-number">
-												<span class="digit">0</span>
-												<span class="digit">0</span>	
-											</span>
-											<span class="time-name">Hours</span>
-										</div>
-									</div>
-								</div>
-			
-								<div class="col-sm-3">
-									<div class="time-box">
-										<div class="time-box-inner dash minutes_dash animated" data-animation="rollIn" data-animation-delay="900">
-											<span class="time-number">
-												<span class="digit">0</span>
-												<span class="digit">0</span>
-											</span>
-											<span class="time-name">Minutes</span>
-										</div>
-									</div>
-								</div>
-			
-								<div class="col-sm-3">
-									<div class="time-box">
-										<div class="time-box-inner dash seconds_dash animated" data-animation="rollIn" data-animation-delay="1200">
-											<span class="time-number">
-												<span class="digit">0</span>
-												<span class="digit">0</span>
-											</span>
-											<span class="time-name">Seconds</span>
-										</div>
-									</div>
-								</div>
-								
-							</div><!-- /.time-count-container -->
-									<!-- split -->
-					
-						
-				
-					</div>
-						     
-						</div>
-							
-					  
-					       
-					        
-							
-					</div>
-					<!-- end of row -->
-					<br/>
-					<div class="progress">
-					    <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-					      70% Complete
-					    </div>
-					</div>
-					
-				</div>
-			</div>
-					
-			
-		</section>
-        <!--
-        End Our Works
-        ==================================== -->
-		
-		
 	
 		
-		
-		
-		
-		 <!--
-        Features
-        ==================================== -->
-		
-		<section id="features" class="features">
-			<div class="container">
-				<div class="row">
-				
-					<div class="sec-title text-center mb50 wow bounceInDown animated" data-wow-duration="500ms">
-						<h2>More Detailed</h2>
-						<div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
-					</div>
-
-					<!-- service item -->
-					<div class="col-md-4 wow fadeInLeft" data-wow-duration="500ms">
-						<div class="service-item">
-							<div class="service-icon">
-								<i class="fa fa-recycle fa-2x"></i>
-							</div>
-							
-							<div class="service-desc">
-								<h3>Made Of</h3>
-								<p> 
-								@madeof 
-								<a></a></p>
-							</div>
-						</div>
-					</div>
-					<!-- end service item -->
-					
-					<!-- service item -->
-					<div class="col-md-4 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="500ms">
-						<div class="service-item">
-							<div class="service-icon">
-								<i class="fa fa-pencil fa-2x"></i>
-							</div>
-							
-							<div class="service-desc">
-								<h3>How To Wash</h3>
-								<p>@howtowash</p>
-							</div>
-						</div>
-					</div>
-					<!-- end service item -->
-					
-					<!-- service item -->
-					<div class="col-md-4 wow fadeInRight" data-wow-duration="500ms"  data-wow-delay="900ms">
-						<div class="service-item">
-							<div class="service-icon">
-								<i class="fa fa-bullhorn fa-2x"></i>
-							</div>
-							
-							<div class="service-desc">
-								<h3>Why Me</h3>
-								<p>@whyme</p>
-							</div>
-						</div>
-					</div>
-					<!-- end service item -->
-						
-				</div>
-			</div>
-		</section>
-		
-        <!--
-        End Features
-        ==================================== -->
-		
-		
-		
-       
-		
-		
-		
-
-		
-		
-		
-		<!--
-        Contact Us
+		    <!--
+        Contact
         ==================================== -->		
 		
-		<section id="comment" class="contact">
+		<section id="contact" class="contact">
 			<div class="container">
 				<div class="row mb50">
 				
 					<div class="sec-title text-center mb50 wow fadeInDown animated" data-wow-duration="500ms">
-						<h2>Comment</h2>
+						<h2>Cart</h2>
 						<div class="devider"><i class="fa fa-heart-o fa-lg"></i></div>
 					</div>
 					
 					<div class="sec-sub-title text-center wow rubberBand animated" data-wow-duration="1000ms">
-						<p>Welcome for any questions and suggestions</p>
+						<p>Update your cart here。</p>
 					</div>
 					
 					
+					
 					<!-- contact form -->
-					<div class="wow text-center fadeInDown animated" data-wow-duration="500ms" data-wow-delay="300ms">
-						
-						<div class="sec-sub-title text-center wow rubberBand animated" data-wow-duration="1000ms">
-						<p>@history comment list{@project_id @user_id @comment}</p>
-						</div>
-						
-						<div class="contact-form">
-							<h3>Leave a comment</h3>
-							<form action="#" id="contact-form">
+					<div class="text-center wow fadeInDown  text-center animated" data-wow-duration="500ms" data-wow-delay="300ms">
+						<div class="contact-form" >
+
+							<form action="#" id="contact-form">	
+								<div class="input-group row address-country">
+									
+
+									<div class="col-md-1">CB</div>
+									<div class="col-md-2">@title</div>
+
+									<div class="col-md-2">@price</div>
+
+									<div class="col-md-1">@size</div>
+
+									<div class="col-md-2">
+										<input type="text" name="number" id="number" placeholder="@number" class="form-control">
+									</div>
+									
+								</div>
+								
+								<div class="input-group row address-country">
+									
+
+									<div class="col-md-1">CB</div>
+									<div class="col-md-2">@title</div>
+
+									<div class="col-md-2">@price</div>
+
+									<div class="col-md-1">@size</div>
+
+									<div class="col-md-2">
+										<input type="text" name="number" id="number" placeholder="@number" class="form-control">
+									</div>
+									
+								</div>
+								
+								<div class="input-group row address-country">
+									
+
+									<div class="col-md-1">CB</div>
+									<div class="col-md-2">@title</div>
+
+									<div class="col-md-2">@price</div>
+
+									<div class="col-md-1">@size</div>
+
+									<div class="col-md-2">
+										<input type="text" name="number" id="number" placeholder="@number" class="form-control">
+									</div>
+									
+								</div>
+								
+								<div class="input-group row address-country">
+									
 
 
-								<div class="input-group">
-									<textarea name="message" id="message" placeholder="Message" class="form-control"></textarea>
+
+									<div class="col-md-2">Total:</div>
+
+									<div class="col-md-2">
+										<input type="text" name="total" id="total" placeholder="@total" class="form-control">
+									</div>
+									
+									<div class="col-md-2">
+									<button type="button" class="btn btn-warning">Pay</button>
+									</div>
+									
 								</div>
-								<div class="input-group">
-									<input type="submit" id="form-submit" class="pull-right" value="Comment">
-								</div>
+								
+							
 							</form>
 						</div>
 					</div>
 					<!-- end contact form -->
 					
-					
 				</div>
 			</div>
-			
+
 		</section>
+		
+        <!--
+        End Contact
+        ==================================== -->
+     
+       
+
 		
         <!--
         End Contact Us
@@ -490,6 +287,11 @@
         <script src="js/jquery-countTo.js"></script>
 		<!-- jquery.appear -->
         <script src="js/jquery.appear.js"></script>
+		<!-- Contact form validation -->
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.32/jquery.form.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.11.1/jquery.validate.min.js"></script>
+		<!-- Google Map -->
+        <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
 		<!-- jquery easing -->
         <script src="js/jquery.easing.min.js"></script>
 		<!-- jquery easing -->
@@ -510,8 +312,6 @@
 		
 		<script type="text/javascript">
 			$(function(){
-				
-
 				/* ========================================================================= */
 				/*	Contact Form
 				/* ========================================================================= */
