--- a/application/views/Pages/demo_zoom.html
+++ b/application/views/Pages/demo_zoom.html
@@ -14,20 +14,23 @@
 
 <script>
     $('#zoom_01').elevateZoom({
-    zoomType: "inner",
+
 cursor: "crosshair",
+scrollZoom: true,
 zoomWindowFadeIn: 500,
 zoomWindowFadeOut: 750
    }); 
     $('#zoom_02').elevateZoom({
         zoomType: "inner",
     cursor: "crosshair",
+    scrollZoom: true,
     zoomWindowFadeIn: 500,
     zoomWindowFadeOut: 750
        }); 
     $('#zoom_03').elevateZoom({
         zoomType: "inner",
     cursor: "crosshair",
+    scrollZoom: true,
     zoomWindowFadeIn: 500,
     zoomWindowFadeOut: 750
        }); 
