demo of projects

--- a/application/views/Pages/project.html
+++ b/application/views/Pages/project.html
@@ -467,6 +467,9 @@
 						</p>
 					</div>
 				</div>
+				<div class="sec-sub-title text-center">
+				<p>button (ajax) loading more</p>
+				</div>
 			</div>
 		</footer>
 		
